<resources>
    <string name="app_name">Tiasakeun</string>
    <string name="example_activity_text">Minum Air 2 L</string>
    <string name="example_activity_progress">1500 ml / 2000 ml</string>
    <string name="add_new_activity">Tambah Aktivitas Baru</string>
    <string name="add_new_sub_activity">Tambah Sub Aktivitas Baru</string>
    <string name="edit_activity">Edit Aktivitas</string>
    <string name="edit_sub_activity">Edit Sub Aktivitas</string>
    <string name="title">Judul</string>
    <string name="type">Tipe</string>
    <string name="create">Buat</string>
    <string name="delete">Hapus</string>
    <string name="cancel">Batal</string>
    <string name="update">Ubah</string>
    <string name="total">Total</string>
    <string name="create_data_succesfully">Data berhasil disimpan</string>
    <string name="target">Target</string>
    <string name="failed_to_save_the_data">Gagal menyimpan data!</string>
    <string name="schedule">Penjadwalan</string>
    <string name="choose_date">Pilih Tanggal</string>
    <string name="choose_time">Pilih Waktu</string>
    <string name="set_date">Set Tanggal</string>
    <string name="set_time">Set Waktu</string>
    <string name="choose_icon">Pilih icon</string>
    <string name="schedule_date">Jadwal Pengulangan</string>
    <string name="completion_activity">Konfirmasi Penyelesaian</string>
    <string name="unit">Satuan</string>
    <string name="sub_activity">Sub Activity</string>
    <string name="finish">Selesai</string>
    <string name="save_time">Simpan waktu</string>
    <string name="data_activity_does_not_exist">Tidak ada data aktivitas</string>
    <string name="no_activity_data_exists">Belum ada data aktivitas</string>
    <string name="activity_log">Log Aktivitas</string>
    <string name="one_day">1H</string>
    <string name="one_week">1M</string>
    <string name="one_month">1B</string>
    <string name="three_month">3B</string>
    <string name="one_year">1T</string>
    <string name="sorting">Urutkan</string>
    <string name="reading_a_book">Membaca buku</string>
    <string name="sixty_minutes">60 Menit</string>
    <string name="example_date">22 Juli 2026</string>
    <string name="all">Semua</string>
    <string name="activity_chart">Grafik Aktivitas</string>
</resources>