<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="8dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:padding="0dp">

        <TextView
            android:id="@+id/tvSubActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_body_large"
            android:textColor="@color/primary_text"
            android:text="@string/reading_a_book"
            android:layout_marginBottom="4dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tvSubActivityValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_body_large"
            android:textColor="@color/primary_text"
            android:text="@string/sixty_minutes"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvSubActivityDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="@dimen/text_size_body_large"
        android:textColor="@color/primary_text"
        android:layout_weight="1"
        android:text="@string/example_date"/>
</LinearLayout>