<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="2dp"

        app:cardBackgroundColor="@color/surface_card">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:layout_gravity="center_horizontal">

            tools:ignore="MissingConstraints"
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCloseDialogSubActivity"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/accent_blue"
                app:icon="@drawable/baseline_close_24"
                app:iconGravity="textStart"

                app:iconPadding="0dp"
                android:padding="0dp"

                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"

                android:layout_marginBottom="8dp"
                android:layout_gravity="end" />

            <TextView
                android:id="@+id/tvTitleDialogSubActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_new_sub_activity"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/primary_text"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_marginBottom="8dp"
                app:boxStrokeColor="@color/accent_blue"
                app:hintTextColor="@color/accent_blue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSubActivityTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textColor="@color/primary_text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type"
                android:layout_marginBottom="8dp"
                app:boxStrokeColor="@color/accent_blue"
                app:hintTextColor="@color/accent_blue"
                android:visibility="gone">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/spinnerType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:textColor="@color/primary_text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/llTargetValueQuantity"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="8dp"
                android:visibility="gone">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/target"
                    android:layout_marginHorizontal="4dp"
                    app:boxStrokeColor="@color/accent_blue">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etTotal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:text="0"
                        android:gravity="center"
                        android:textColor="@color/primary_text"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llTargetValueTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp"
                android:visibility="visible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Target Durasi (Jam : Menit)"
                    android:textColor="@color/accent_blue"
                    android:textSize="12sp"
                    android:layout_marginStart="4dp"
                    android:layout_marginBottom="8dp" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="0dp"
                    app:strokeWidth="1dp"
                    app:strokeColor="@color/accent_blue"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="4dp">
                    <TimePicker
                        android:id="@+id/tpSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:timePickerMode="spinner"
                        android:layout_gravity="center"
                        android:paddingVertical="8dp"/>
                </com.google.android.material.card.MaterialCardView>


            </LinearLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cbSchedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/primary_text"
                android:backgroundTint="@color/accent_blue"
                android:text="@string/schedule"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDateSubActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/accent_blue"
                android:text="@string/set_date"
                android:paddingHorizontal="24dp"
                tools:ignore="MissingConstraints"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnTimeSubActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/accent_blue"
                android:text="@string/set_time"
                android:paddingHorizontal="24dp"
                tools:ignore="MissingConstraints"
                android:layout_marginBottom="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/spinnerScheduleLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/schedule_date"
                android:layout_marginBottom="8dp"
                app:boxStrokeColor="@color/accent_blue"
                app:hintTextColor="@color/accent_blue">
                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/spinnerSchedule"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:textColor="@color/primary_text"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCreateSubActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:backgroundTint="@color/accent_blue"
                android:paddingHorizontal="24dp"
                android:layout_marginBottom="8dp"
                tools:ignore="MissingConstraints"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDeleteSubActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:backgroundTint="@color/danger"
                android:paddingHorizontal="24dp"
                android:layout_marginBottom="8dp"
                tools:ignore="MissingConstraints"
                android:visibility="gone"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>
